--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,17 +1,17 @@
 $background: #f7f5f5;
 $border: #e8e7e6;
-$connectedColor: #008C73;
-$disabled: #5D6D74;
+$connectedColor: #008c73;
+$disabled: #5d6d74;
 $error: #f02525;
 $fancy: #f02525;
 $fontColor: #001428;
 $primary: #001428;
-$secondary: #008C73;
-$secondaryTextOrSvg: #B2B5B2;
+$secondary: #008c73;
+$secondaryTextOrSvg: #b2b5b2;
 $secondaryBackground: #f0efee;
 $warning: #ffc05f;
 $fancy: #f02525;
-$secondary: #008C73;
+$secondary: #008c73;
 
 $headerHeight: 53px;
 $marginButtonImg: 12px;
@@ -37,7 +37,6 @@ $smallFontSize: 12px;
 $largeFontSize: 16px;
 $extraLargeFontSize: 20px;
 $extraSmallFontSize: 11px;
-
 
 $lightFont: 300;
 $regularFont: 400;
